--- a/frontend-angular/src/app/shared/sidebar/sidebar.html
+++ b/frontend-angular/src/app/shared/sidebar/sidebar.html
@@ -5,6 +5,6 @@
 
 <nav class="side-menu">
     <a *ngFor="let item of visibleMenuItems" [routerLink]="item.route" routerLinkActive="active">
-        {{item.icon}} {{item.label}}
+        <i [class]="item.icon" style="margin-right: 10px; font-size: 1.2rem;"></i> {{item.label}}
     </a>
 </nav>
