--- a/frontend-angular/src/app/pages/admin/egresos/egresos.html
+++ b/frontend-angular/src/app/pages/admin/egresos/egresos.html
@@ -135,8 +135,9 @@
                     </td>
 
                     <td style="font-size: 0.85rem;">
-                        <span *ngIf="item.contrato_id" style="color:#2563eb; font-weight:bold">#{{ item.contrato_id
-                            }}</span>
+                        <span *ngIf="item.contrato_id" style="color:#2563eb; font-weight:bold">
+                            {{ getNombreClientePorId(item.contrato_id) }}
+                        </span>
                         <span *ngIf="!item.contrato_id" style="color:#94a3b8">Gral.</span>
                     </td>
 
